<resources>
    <string name="app_name">PuahEngKuan</string>
    <string name="sejarah">Sejarah</string>
    <string name="physic">Physic</string>
    <string name="chemistry">Chemistry</string>
    <string name="additional_mathematics">Additional Mathematics</string>
    <string name="science">Science</string>
    <string name="mathematic">Mathematic</string>
    <string name="bahasa_english">Bahasa English</string>
    <string name="bahasa_malaysia">Bahasa Malaysia</string>
    <string name="please_enter_your_spm_result">Please enter your SPM result</string>
    <string name="check_result">Check Result</string>
    <string name="result">Result :</string>
    <string name="spm">SPM</string>
    <string name="o_level">O Level</string>
    <string name="uec">UEC</string>
    <string name="please_select_your_qualification_level">Please Select Your Qualification Level</string>
    <string name="please_enter_your_o_level_result">Please enter your O Level result</string>
    <string name="please_enter_your_uec_result">Please enter your UEC result</string>
</resources>
